--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: ./frontend
-      dockerfile: ../Dockerfile  # assuming Dockerfile for frontend remains in root
+      context: ../frontend
+      dockerfile: ../infra/Dockerfile  # Dockerfile for Next.js in infra
     ports:
       - "3000:3000"
     environment:
@@ -14,11 +14,11 @@ services:
 
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile  # create a Dockerfile inside backend/
+      context: ../backend
+      dockerfile: Dockerfile  # You’ll put a separate Dockerfile inside backend/
     ports:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
-      - ./backend:/app
+      - ../backend:/app
